--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit <%= @job.title %> at <%= @company.name %></h1>
+<h1>Edit "<%= @job.title %>" at <%= @company.name %></h1>
 
 <%= render partial: "jobs/form" %>
