--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,5 +11,7 @@
   <%= f.label :city %>
   <%= f.text_field :city %>
 
+  <%= f.select :category_id, options_for_select(@categories.map { |c| [c.title, c.id] }) %>
+
   <%= f.submit %>
 <% end %>
