--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,9 @@
 <h1>All Categories</h1>
+
+<% @categories.each do |category| %>
+  <div>
+    <%= category.title %>
+    <%= link_to "Edit Category", edit_category_path(category), id: "edit_#{category.title}" %>
+    <%= link_to "Delete Category", category_path(category), id: "delete_#{category.title}", method: :delete, data: {confirm: "Are you sure you want to delete #{category.title?}"} %>
+  </div>
+  <% end %>
