--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,3 +15,5 @@ Company: <%= link_to @job.company.name, company_path(@job.company) %>
 Category  <%= link_to @job.category.title, category_path(@job.category) %>
 
 Delete: <%= link_to "Delete", company_job_path(@job.company, @job), method: :delete, data: {confirm: "Are you sure you want to delete #{@job.title}"} %>
+
+<%= render partial: 'jobs/comment', collection: @job.comments.reverse %>
