--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -16,4 +16,6 @@ Category  <%= link_to @job.category.title, category_path(@job.category) %>
 
 Delete: <%= link_to "Delete", company_job_path(@job.company, @job), method: :delete, data: {confirm: "Are you sure you want to delete #{@job.title}"} %>
 
+<h1>Comments:</h1>
 <%= render partial: 'jobs/comment', collection: @job.comments.reverse %>
+<%= render partial: 'comments/form' %>
