Add create action to contactscontroller, add contacts partial to companies view

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -4,4 +4,5 @@ All Jobs for <strong><%= @company.name %></strong>
   <ul><%= job.title %></ul>
 <% end %>
 
+<%= render partial: 'companies/contact', collection: @company.contacts.order('lower(name)') %>
 <%= render partial: 'contacts/form' %>
