--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -1,12 +1,16 @@
-<% @companies.first(3).each_with_index do |company, index| %>
-  <div class="top-3-companies">
-    <p>This is your #<%= index + 1 %> company!</p>
-    <p>You are on average <%= company.jobs.average(:level_of_interest) %>% interested in jobs at <%= company.name %></p>
-  </div>
-<% end %>
+<section class="top-3">
+  <% @companies.first(3).each_with_index do |company, index| %>
+    <div class="top-3-company">
+      <p><%= company.name %> is your #<%= index + 1 %> company!</p>
+      <p>You are on average <%= company.jobs.average(:level_of_interest) %>% interested in jobs here.</p>
+    </div>
+  <% end %>
+</section>
 
-<% @jobs.each do |loi, count| %>
-  <div class="loi_dashboard">
-    You are <%= loi %>% interested in <%= count %> jobs.
-  </div>
-<% end %>
+<section class="loi-list">
+  <% @jobs_by_interest.each do |loi, count| %>
+    <div class="loi-item">
+      You are <%= loi %>% interested in <%= count %> jobs.
+    </div>
+  <% end %>
+</section>
