--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,11 +1,13 @@
 <h3>All Companies</h3>
 
-<ul>
+<section class = "company_list">
   <% @companies.each do |company| %>
-  <li class=company_<%= company.id %>>
-    <%= link_to company.name, company_path(company) %>: 
-    <%= link_to "Edit", edit_company_path(company) %>
-    <%= link_to "Delete", company_path(company), method: "delete" %>
-  </li>
+  <div id="company_<%= company.id %>" class="index_company">
+    <%= link_to company.name, company_path(company) %>
+    <div class="modify">
+      <%= link_to "Edit", edit_company_path(company) %>
+      <%= link_to "Delete", company_path(company), method: "delete" %>
+    </div>
+  </div>
   <% end %>
-</ul>
+</section>
