--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,31 @@
 <body>
   <h1>Job Tracker</h1>
   <nav>
-    <div id="companies" class="dropdown">
-      <p>companies</p>
-        <div class="dropdown-content">
-           <%= link_to "Companies Index", companies_path %>
-        </div>
+    <div class="navlinks">
+      <div id="companies" class="dropdown">
+        <p>Companies</p>
+          <div class="dropdown-content">
+             <%= link_to "Companies Index", companies_path %>
+             <%= link_to "Find a company" %>
+          </div>
+      </div>
+      <div id="categories" class="dropdown">
+        <p>Categories</p>
+          <div class="dropdown-content">
+             <%= link_to "Categories Index", categories_path %>
+             <%= link_to "Find a Category", categories_path %>
+          </div>
+      </div>
+      <div id="jobs" class="dropdown">
+        <p>Jobs</p>
+          <div class="dropdown-content">
+             <%= link_to "Jobs Index", jobs_path %>
+             <%= link_to "Find a Category", jobs_path %>
+          </div>
+      </div>
     </div>
-    <div id="categories" class="dropdown">
-      <p>categories</p>
-        <div class="dropdown-content">
-           <%= link_to "Categories Index", categories_path %>
-        </div>
+    <div id="navdashboard">
+       <%= link_to "Dashboard", dashboard_path %>
     </div>
   </nav>
   <% flash.each do |name, msg| %>
