Modify nav bar for jobs dropdown

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <p>Jobs</p>
           <div class="dropdown-content">
              <%= link_to "Jobs Index", jobs_path %>
-             <%= link_to "Find a Category", jobs_path %>
+             <%= link_to "Find a Job", jobs_path %>
           </div>
       </div>
     </div>
