--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,21 +1,19 @@
-Title: <%= @job.title %>
-<br>
+<section class="show">
+  <div>Title: <%= @job.title %></div>
+  <div>Description: <%= @job.description %></div>
+  <div>Level of Interest: <%= @job.level_of_interest %></div>
+  <div>City: <%= @job.city %></div>
+  <div>Company: <%= link_to @job.company.name, company_path(@job.company) %></div>
+  <div>Category:  <%= link_to @job.category.title, category_path(@job.category) %></div>
+<div><%= link_to "Delete", company_job_path(@job.company, @job), method: :delete, data: {confirm: "Are you sure you want to delete #{@job.title}"} %></div>
 
-Description: <%= @job.description %>
-<br>
-
-Level of Interest: <%= @job.level_of_interest %>
-<br>
-
-City: <%= @job.city %>
-<br>
-
-Company: <%= link_to @job.company.name, company_path(@job.company) %>
-<br>
-Category  <%= link_to @job.category.title, category_path(@job.category) %>
-
-Delete: <%= link_to "Delete", company_job_path(@job.company, @job), method: :delete, data: {confirm: "Are you sure you want to delete #{@job.title}"} %>
-
+<div class="comments_form">
+  <%= render partial: 'comments/form' %>
+</div>
 <h1>Comments:</h1>
-<%= render partial: 'jobs/comment', collection: @job.comments.reverse %>
-<%= render partial: 'comments/form' %>
+<div class="posted_comments">
+  <%= render partial: 'jobs/comment', collection: @job.comments.reverse %>
+</div>
+
+
+</section>
