--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           <div class="dropdown-content">
              <%= link_to "Companies Index", companies_path %>
              <%= link_to "Sort Companies by Interest", '/companies?sort=interest'  %>
+             <%= link_to "New Company", new_company_path %>
           </div>
       </div>
       <div id="categories" class="dropdown">
@@ -23,6 +24,7 @@
           <div class="dropdown-content">
              <%= link_to "Categories Index", categories_path %>
              <%= link_to "Sort Categories Alphbetically", '/categories?sort=abc' %>
+             <%= link_to "New Category", new_category_path %>
           </div>
       </div>
       <div id="jobs" class="dropdown">
