--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -10,6 +10,11 @@
   a {text-decoration: none;}
 }
 
+.index_company:hover {
+  transform: scale(1.1, 1.1);
+  .cn-index {color:#fc7871}
+}
+
 .modify {
   display: flex;
   justify-content: center;
@@ -18,4 +23,10 @@
     font-size: 12px;
     margin: 20px;
   }
+}
+
+.company_job_city {
+  margin: 20px;
+  font-size: 14px;
+  font-style: italic;
 }
