--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -1,16 +1,21 @@
+<h1>Welcome to Your Dashboard</h1>
+
 <section class="top-3">
   <% @companies.first(3).each_with_index do |company, index| %>
-    <div class="top-3-company">
-      <p><%= company.name %> is your #<%= index + 1 %> company!</p>
-      <p>You are on average <%= company.jobs.average(:level_of_interest) %>% interested in jobs here.</p>
-    </div>
+    <%= link_to(company_path(company), html_options = {class: "top-3-company"}) do %>
+      <div>
+        <p> <strong> <%= company.name %></strong> is your #<%= index + 1 %> company!</p>
+        <p class="dashboard_average">You are on average <%= company.jobs.average(:level_of_interest) %>% interested in jobs here.</p>
+      </div>
+    <% end %>
   <% end %>
 </section>
 
 <section class="num-jobs-location">
+  <h4>You are tracking:</h4>
   <% @jobs_per_location.each do |city, count| %>
     <div class="city_count">
-      You are tracking <%= count %> jobs in <%= link_to city, "/jobs?location=#{city}" %>
+      <%= count %> jobs in <%= link_to city, "/jobs?location=#{city}" %>
     </div>
   <% end %>
 </section>
