--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,9 @@
-<h3>All Companies</h3>
+<h1>All Companies</h1>
 
 <section class = "list">
   <% @companies.each do |company| %>
   <div id="company_<%= company.id %>" class="index_company">
-    <%= link_to company.name, company_path(company) %>
+    <%= link_to company.name, company_path(company), class: "cn-index" %>
     <div class="modify">
       <%= link_to "Edit", edit_company_path(company) %>
       <%= link_to "Delete", company_path(company), method: "delete" %>
