--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,8 +1,13 @@
 <% unless @company.nil? %>
-  All Jobs for <strong><%= @company.name %></strong>
+  <h1>All Jobs for <strong><%= @company.name %></strong></h1>
 <% else %>
-  Viewing All Jobs
+  <h1>All Jobs</h1>
 <% end %>
+<div class="job_cities">
+  <% @cities.each do |city| %>
+    <%= link_to city, "/jobs?location=#{city}" %>
+  <% end %>
+</div>
 <section class="list">
   <% @jobs.each do |job| %>
     <%= link_to(job_path(job), html_options = {class: "index_job"}) do %>
