Update destroy in companies controller to function with jobs & comments dependencies

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,10 @@
 <h1>Viewing '<%= @category.title %>' Category</h1>
 
-<% @jobs.each do |job| %>
- <div>
-   <p><%= link_to job.title, company_job_path(job.company, job) %></p>
- </div>
-<% end %>
+<section class="list">
+  <% @jobs.each do |job| %>
+   <div class="index-job">
+     <div><%= link_to job.title, company_job_path(job.company, job) %></div>
+     <div class="job-city"><%= link_to job.city, "/jobs?location=#{job.city}" %></div>
+   </div>
+  <% end %>
+</section>
