--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= link_to dashboard_path do %>
   <h1>Job Tracker</h1>
+  <% end %>
   <nav>
     <div class="navlinks">
       <div id="companies" class="dropdown">
