--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
 <section class="list">
   <% @categories.each do |category| %>
     <div class="index_category">
-      <%= link_to category.title, category_path(category) %>
+      <%= link_to category.title, category_path(category), class:"cat-index" %>
       <div class="modify">
         <%= link_to "Edit Category", edit_category_path(category), id: "edit_#{category.title}" %>
         <%= link_to "Delete Category", category_path(category), id: "delete_#{category.title}", method: :delete, data: {confirm: "Are you sure you want to delete #{category.title?}"} %>
