--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,6 +11,7 @@
   <%= f.label :city %>
   <%= f.text_field :city %>
 
+  <%= f.label :category_id %>
   <%= f.select :category_id, options_for_select(@categories.map { |c| [c.title, c.id] }) %>
 
   <%= f.submit %>
