Add back to all categories link on categories show page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,7 @@
 <h1>Viewing '<%= @category.title %>' Category</h1>
+<%= link_to categories_path do %>
+  <h4>To All Categories</h4>
+<% end %>
 
 <section class="list">
   <% @jobs.each do |job| %>
